# libserialport

./: CMakeLists.txt  Doxyfile
.github/workflows/: build.yml
inc/: libserialport.h
src/: freebsd.c  libserialport_internal.h  linux.c  linux_termios.c  macosx.c  test_timing.c
